objects/KPI1_Case_Details__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>KPI Case Details</relationshipLabel>
        <relationshipName>KPI_Case_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Logged_By_GU_Certified_Contact__c</fullName>
        <label>Case Logged By GU Certified Contact</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <externalId>true</externalId>
        <label>Platform</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem_Description_Clear_and_Detailed__c</fullName>
        <label>Problem Description Clear and Detailed?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Should_Have_Been_Solved_Using_Docs_KB__c</fullName>
        <label>Should Have Been Solved Using Docs/KB?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Status_Group__c</fullName>
        <label>Sub Status Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supporting_Info_Provided__c</fullName>
        <label>Supporting Info Provided?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>KPI1 Case Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Period__c</columns>
        <columns>Product__c</columns>
        <columns>Supporting_Info_Provided__c</columns>
        <columns>Problem_Description_Clear_and_Detailed__c</columns>
        <columns>Should_Have_Been_Solved_Using_Docs_KB__c</columns>
        <columns>Case_Logged_By_GU_Certified_Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>KPI1 Case Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Case Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>